--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -7,60 +5,34 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  font-family: 'Arsenal', sans-serif;
-  padding: 3vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
   justify-content: center;
-  background: url("assets/vr.jpg") center;  
+  background: url("assets/bg.jpg") center;
 }
 
-p {
-  margin: 1.25vh;
-  font-size: 4vh;
-}
-
-
-h1 {
-  text-align: center;
-  font-weight: 700;
-  color: #fefefe;
-}
-
-.card {
-  max-width: 70%;
+.card_row {
+  width: 100%;
   padding: 1vh;
+  display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+}
+
+.card_area1,
+.card_area2,
+.card_area3 {
   transition: transform 1.2s;
   perspective: 150vh;
 }
 
-.card img {
-  width: 38vh;
+img {
+  width: 42vh;
   cursor: pointer;
-}
-
-.arcana {
-  height: 8vh;
-  margin: 4vh;
-  width: 95%;
-}
-
-
-.info {
-  width: 95%;
-  height: 18vh;
-  padding: 0vh;
-  background: #bdcbe0;
-  color: #1d1d1d;
-  border: solid 0.1vh rgb(37, 45, 131);
-  border-radius: 1vh;
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
 }
