--- a/style.css
+++ b/style.css
@@ -47,13 +47,15 @@ img {
   }
 
   .card_row {
-    width: 95%;
-    height: 100%;
-    flex-direction: column;
+    overflow-x: scroll;
+    scroll-behavior: smooth;    
+    align-items: unset;
+    justify-content: unset;
   }
 
   img {
-    max-width: 20vh;
     cursor: pointer;
+    margin-right: 2vh;
+    margin-left: 2vh;
   }
 }
